# extism_dart_sdk

./: .gitignore  analysis_options.yaml  ffigen.yaml  justfile  pubspec.yaml
example/: extism_dart_sdk_example.dart
lib/: extism_dart_sdk.dart
lib/extism/: api.dart  generated_bindings.dart
lib/extism/api/: api.dart  buffer.dart  current_plugin.dart  function.dart  manifest.dart  manifest.g.dart  plugin.dart  types.dart  userdata.dart
lib/utils/: extensions.dart  json_converter.dart  log.dart
test/: extism_dart_sdk_test.dart  wasms.dart
test/c/memory/: CMakeLists.txt
test/c/memory/include/: memory.h
test/c/memory/src/: memory.cpp
test/extism/api/: api_test.dart  function_test.dart  manifest_test.dart  runtime_test.dart  runtime_test.freezed.dart  runtime_test.g.dart
test/extism/utils/: log.dart  matchers.dart
test/ffi/: dylib_utils.dart  ffi_test_helpers.dart  gc.dart  gc_test.dart  libfree.dart  native_finalizer_test.dart
